==> maarten-pennings/CCS811/src/ccs811.cpp <==
#include <Arduino.h>
#include <Wire.h>
#include "ccs811.h"
#define PRINTLN(s)    Serial.println(s)
#define PRINT(s)      Serial.print(s)
#define PRINTLN2(s,m) Serial.println(s,m)
#define PRINT2(s,m)   Serial.print(s,m)
#define CCS811_WAIT_AFTER_RESET_US     2000 // The CCS811 needs a wait after reset
#define CCS811_WAIT_AFTER_APPSTART_US  1000 // The CCS811 needs a wait after app start
#define CCS811_WAIT_AFTER_WAKE_US        50 // The CCS811 needs a wait after WAKE signal
#define CCS811_WAIT_AFTER_APPERASE_MS   500 // The CCS811 needs a wait after app erase (300ms from spec not enough)
#define CCS811_WAIT_AFTER_APPVERIFY_MS   70 // The CCS811 needs a wait after app verify
#define CCS811_WAIT_AFTER_APPDATA_MS     50 // The CCS811 needs a wait after writing app data
#define CCS811_STATUS           0x00
#define CCS811_MEAS_MODE        0x01
#define CCS811_ALG_RESULT_DATA  0x02 // up to 8 bytes
#define CCS811_RAW_DATA         0x03 // 2 bytes
#define CCS811_ENV_DATA         0x05 // 4 bytes
#define CCS811_THRESHOLDS       0x10 // 5 bytes
#define CCS811_BASELINE         0x11 // 2 bytes
#define CCS811_HW_ID            0x20
#define CCS811_HW_VERSION       0x21
#define CCS811_FW_BOOT_VERSION  0x23 // 2 bytes
#define CCS811_FW_APP_VERSION   0x24 // 2 bytes
#define CCS811_ERROR_ID         0xE0
#define CCS811_APP_ERASE        0xF1 // 4 bytes
#define CCS811_APP_DATA         0xF2 // 9 bytes
#define CCS811_APP_VERIFY       0xF3 // 0 bytes
#define CCS811_APP_START        0xF4 // 0 bytes

bool CCS811::flash(const uint8_t * image, int size) {
  uint8_t sw_reset[]=   {0x11,0xE5,0x72,0x8A};
  uint8_t app_erase[]=  {0xE7,0xA7,0xE6,0x09};
  uint8_t app_verify[]= {};
  uint8_t status;
  int count;
  bool ok;
  wake_up();

    // Try to ping CCS811 (can we reach CCS811 via I2C?)
    PRINT(F("ccs811: ping "));
    ok= i2cwrite(0,0,0);
    if( !ok ) {
      PRINTLN(F("FAILED"));
      goto abort_begin;
    }
    PRINTLN(F("ok"));

    // Invoke a SW reset (bring CCS811 in a know state)
    PRINT(F("ccs811: reset "));
    ok= i2cwrite(CCS811_SW_RESET,4,sw_reset);
    if( !ok ) {
      PRINTLN(F("FAILED"));
      goto abort_begin;
    }
    delayMicroseconds(CCS811_WAIT_AFTER_RESET_US);
    PRINTLN(F("ok"));

    // Check status (after reset, CCS811 should be in boot mode with or without valid app)
    PRINT(F("ccs811: status (reset1) "));
    ok= i2cread(CCS811_STATUS,1,&status);
    if( !ok ) {
      PRINTLN(F("FAILED"));
      goto abort_begin;
    }
    PRINT2(status,HEX);
    PRINT(F(" "));
    if( status!=0x00 && status!=0x10 ) {
      PRINTLN(F("ERROR - ignoring")); // Seems to happens when there is no valid app
    } else {
      PRINTLN(F("ok"));
    }

    // Invoke app erase
    PRINT(F("ccs811: app-erase "));
    ok= i2cwrite(CCS811_APP_ERASE,4,app_erase);
    if( !ok ) {
      PRINTLN(F("FAILED"));
      goto abort_begin;
    }
    delay(CCS811_WAIT_AFTER_APPERASE_MS);
    PRINTLN(F("ok"));

    // Check status (CCS811 should be in boot mode without valid app, with erase completed)
    PRINT(F("ccs811: status (app-erase) "));
    ok= i2cread(CCS811_STATUS,1,&status);
    if( !ok ) {
      PRINTLN(F("FAILED"));
      goto abort_begin;
    }
    PRINT2(status,HEX);
    PRINT(F(" "));
    if( status!=0x40 ) {
      PRINTLN(F("ERROR"));
      goto abort_begin;
    }
    PRINTLN(F("ok"));

    // Write all blocks
    count= 0;
    while( size>0 ) {
        if( count%64==0 ) { PRINT(F("ccs811: writing ")); PRINT(size); PRINT(F(" ")); }
        int len= size<8 ? size : 8;
        // Copy PROGMEM to RAM
        uint8_t ram[8];
        memcpy_P(ram, image, len);
        // Send 8 bytes from RAM to CCS811
        ok= i2cwrite(CCS811_APP_DATA,len, ram);
        if( !ok ) {
          PRINTLN(F("ccs811: app data failed"));
          goto abort_begin;
        }
        PRINT(F("."));
        delay(CCS811_WAIT_AFTER_APPDATA_MS);
        image+= len;
        size-= len;
        count++;
        if( count%64==0 ) { PRINT(F(" ")); PRINTLN(size); }
    }
    if( count%64!=0 ) { PRINT(F(" ")); PRINTLN(size); }

    // Invoke app verify
    PRINT(F("ccs811: app-verify "));
    ok= i2cwrite(CCS811_APP_VERIFY,0,app_verify);
    if( !ok ) {
      PRINTLN(F("FAILED"));
      goto abort_begin;
    }
    delay(CCS811_WAIT_AFTER_APPVERIFY_MS);
    PRINTLN(F("ok"));

    // Check status (CCS811 should be in boot mode with valid app, and erased and verified)
    PRINT(F("ccs811: status (app-verify) "));
    ok= i2cread(CCS811_STATUS,1,&status);
    if( !ok ) {
      PRINTLN(F("FAILED"));
      goto abort_begin;
    }
    PRINT2(status,HEX);
    PRINT(F(" "));
    if( status!=0x30 ) {
      PRINTLN(F("ERROR"));
      goto abort_begin;
    }
    PRINTLN(F("ok"));

    // Invoke a second SW reset (clear flashing flags)
    PRINT(F("ccs811: reset2 "));
    ok= i2cwrite(CCS811_SW_RESET,4,sw_reset);
    if( !ok ) {
      PRINTLN(F("FAILED"));
      goto abort_begin;
    }
    delayMicroseconds(CCS811_WAIT_AFTER_RESET_US);
    PRINTLN(F("ok"));

    // Check status (after reset, CCS811 should be in boot mode with valid app)
    PRINT(F("ccs811: status (reset2) "));
    ok= i2cread(CCS811_STATUS,1,&status);
    if( !ok ) {
      PRINTLN(F("FAILED"));
      goto abort_begin;
    }
    PRINT2(status,HEX);
    PRINT(F(" "));
    if( status!=0x10 ) {
      PRINTLN(F("ERROR"));
      goto abort_begin;
    }
    PRINTLN(F("ok"));

  // CCS811 back to sleep
  wake_down();
  // Return success
  return true;

abort_begin:
  // CCS811 back to sleep
  wake_down();
  // Return failure
  return false;
}

void CCS811::wake_init( void ) {
  if( _nwake>=0 ) pinMode(_nwake, OUTPUT);
}

void CCS811::wake_up( void) {
  if( _nwake>=0 ) { digitalWrite(_nwake, LOW); delayMicroseconds(CCS811_WAIT_AFTER_WAKE_US);  }
}

void CCS811::wake_down( void) {
  if( _nwake>=0 ) digitalWrite(_nwake, HIGH);
}

bool CCS811::i2cwrite(int regaddr, int count, const uint8_t * buf) {
  Wire.beginTransmission(_slaveaddr);              // START, SLAVEADDR
  Wire.write(regaddr);                             // Register address
  for( int i=0; i<count; i++) Wire.write(buf[i]);  // Write bytes
  int r= Wire.endTransmission(true);               // STOP
  return r==0;
}

bool CCS811::i2cread(int regaddr, int count, uint8_t * buf) {
  Wire.beginTransmission(_slaveaddr);              // START, SLAVEADDR
  Wire.write(regaddr);                             // Register address
  int wres= Wire.endTransmission(false);           // Repeated START
  delayMicroseconds(_i2cdelay_us);                 // Wait
  int rres=Wire.requestFrom(_slaveaddr,count);     // From CCS811, read bytes, STOP
  for( int i=0; i<count; i++ ) buf[i]=Wire.read();
  return (wres==0) && (rres==count);
}
